--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -2,7 +2,7 @@
   flex: 1;
   border-right: 0.5px solid rgb(230, 227, 227);
   min-height: 100vh;
-  background-color: white;
+  background-color: rgb(5, 11, 83);
 
   .top {
     height: 50px;
@@ -13,7 +13,7 @@
     .logo {
       font-size: 20px;
       font-weight: bold;
-      color: #6439ff;
+      color: #ffffff;
     }
   }
 
@@ -21,7 +21,15 @@
     height: 0;
     border: 0.5px solid rgb(230, 227, 227);
   }
-
+img{
+  width: 130px;
+  height: 40px;
+}
+span{
+  color: white;
+  text-align: center;
+  font-size: 24px;
+}
   .center {
     padding-left: 10px;
 
@@ -45,18 +53,18 @@
         cursor: pointer;
 
         &:hover {
-          background-color: #ece8ff;
+          background-color: #0088ff;
         }
 
         .icon {
           font-size: 18px;
-          color: #7451f8;
+          color: #f3f2f5;
         }
 
         span{
             font-size: 13px;
             font-weight: 600;
-            color: #888;
+            color: #fbfbfb;
             margin-left: 10px;
         }
       }
