--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -97,6 +97,7 @@
     font-weight: 500;
     cursor: pointer;
     padding-bottom: 10px;
+    margin-bottom: 10px;
   }
   
   .error {
@@ -104,4 +105,6 @@
     font-size: 12px;
   
   }
-  
+  Link{
+    margin-top: 10px;
+  }
