--- a/client/src/components/usersTable/usersTable.scss
+++ b/client/src/components/usersTable/usersTable.scss
@@ -2,10 +2,11 @@
   height: 600px;
   padding: 20px;
   
+  
   .datatableTitle{
     width: 100%;
     font-size: 24px;
-    color: gray;
+    color: rgb(0, 0, 0);
     margin-bottom: 10px;
     display: flex;
     align-items: center;
