--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -5,13 +5,14 @@
   align-items: center;
   font-size: 14px;
   color: #555;
+  background-color: rgb(5, 11, 83);
 
   .wrapper {
     width: 100%;
     padding: 20px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: end;
 
     .search {
       display: flex;
