--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -2,7 +2,8 @@
   flex: 1;
   border-right: 0.5px solid rgb(230, 227, 227);
   min-height: 100vh;
-  background-color: rgb(5, 11, 83);
+  background-color: rgb(239, 239, 241);
+  
 
   .top {
     height: 50px;
@@ -26,7 +27,7 @@ img{
   height: 40px;
 }
 span{
-  color: white;
+  color: black;
   text-align: center;
   font-size: 24px;
 }
@@ -58,13 +59,13 @@ span{
 
         .icon {
           font-size: 18px;
-          color: #f3f2f5;
+          color: black;
         }
 
         span{
             font-size: 13px;
             font-weight: 600;
-            color: #fbfbfb;
+          color: black;
             margin-left: 10px;
         }
       }
