--- a/client/src/components/adverticementTable/adverticementTable.scss
+++ b/client/src/components/adverticementTable/adverticementTable.scss
@@ -66,13 +66,25 @@
       border: 1px dotted rgba(0, 0, 139, 0.596);
       cursor: pointer;
     }
-    
+    .editButton{
+      padding: 2px 5px;
+      border-radius: 5px;
+      color: rgb(2, 72, 42);
+      border: 1px dotted rgba(20, 220, 160, 0.6);
+      cursor: pointer;
+    }
     .deleteButton {
       padding: 2px 5px;
       border-radius: 5px;
       color: crimson;
       border: 1px dotted rgba(220, 20, 60, 0.6);
       cursor: pointer;
+    }
+    .activeStatus{
+      color: green;
+    }
+    .pendingStatus{
+      color: crimson;
     }
   }
 }
