--- a/client/src/components/adverticementTable/adverticementTable.scss
+++ b/client/src/components/adverticementTable/adverticementTable.scss
@@ -40,7 +40,7 @@
     padding: 5px;
     border-radius: 5px;
 
-    &.active {
+    &.activeStatus {
       background-color: rgba(0, 128, 0, 0.05);
       color: green;
     }
@@ -48,7 +48,7 @@
       background-color: rgba(255, 217, 0, 0.05);
       color: goldenrod;
     }
-    &.passive {
+    &.inactiveStatus {
       background-color: rgba(255, 0, 0, 0.05);
       color: crimson;
     }
