--- a/client/src/components/adverticementTable/adverticementTable.scss
+++ b/client/src/components/adverticementTable/adverticementTable.scss
@@ -1,11 +1,12 @@
 .datatable {
   height: 600px;
   padding: 20px;
+  background-color: #e1f7fa;
   
   .datatableTitle{
     width: 100%;
     font-size: 24px;
-    color: gray;
+    color: #010626;
     margin-bottom: 10px;
     display: flex;
     align-items: center;
@@ -20,6 +21,7 @@
       padding: 5px;
       border-radius: 5px;
       cursor: pointer;
+      background-color: rgb(41, 221, 227);
     }
   }
 
