--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -14,17 +14,26 @@
     align-items: start;
     display: flex;
     border-radius: 5px;
-    background-color: rgb(5, 113, 255);
+    background-color: #e1f7fa;
     box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.75);
         -webkit-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.75);
         -moz-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.75);
 
 }
 .coverlogo{
-    width: 60%;
-    height: 98%;
-    margin: 5px 5px 5px 5px;
-    
+    width: 30%;
+    height: 30%;
+}
+.tagline{
+    color: rgb(2, 5, 147);
+    font-size: 18px;
+    justify-content: left;
+    align-items: start;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-style: italic;
+  
 }
 
 .loginLeft
