--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -1,7 +1,7 @@
 .login {
     width: 100vw;
     height: 100vh;
-    background-color: #e3e6ec;
+    background-color: #6de9fa;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,8 +26,8 @@
     margin-bottom: 20px;
 }
 .tagline{
-    color: rgb(2, 5, 147);
-    font-size: 18px;
+    color: rgb(28, 88, 104);
+    font-size: 20px;
     justify-content: left;
     align-items: start;
     display: flex;
