--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -10,7 +10,19 @@
       display: flex;
       padding: 20px;
       gap: 20px;
-
+      .widgets-admin{
+        display: flex;
+        flex-direction: column;
+      width: 100%;
+        .widgets-wrapper {
+            display: flex;
+            justify-content: space-between;
+            flex: 6;
+            gap: 10px;
+            width: 100%;
+            margin-bottom: 20px;
+          }
+      }
       .widgets-wrapper{
         display: flex;
         justify-content: space-between;
