--- a/client/src/pages/singleUser/singleUser.scss
+++ b/client/src/pages/singleUser/singleUser.scss
@@ -42,7 +42,7 @@
           .details {
             .itemTitle {
               margin-bottom: 10px;
-              color: #555;
+              color: #282828;
             }
 
             .detailItem {
@@ -76,8 +76,8 @@
     }
 
     .title {
-      font-size: 16px;
-      color: lightgray;
+      font-size: 20px;
+      color: rgb(60, 58, 58);
       margin-bottom: 20px;
     }
   }
