--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -5,7 +5,7 @@
   align-items: center;
   font-size: 14px;
   color: #555;
-  background-color:#e1f7fa;
+  background-color:#ffffff;
 
   .wrapper {
     width: 100%;
